# tine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  capture.html  index.html  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  vite.config.ts  vitest.config.ts  vitest.render.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.osc-metadata/: sync.json
crates/: lsdoc-block-parse.rs
crates/logseq-core/: Cargo.toml
crates/logseq-core/examples/: roundtrip_dir.rs
crates/logseq-core/src/: config.rs  date.rs  doc.rs  lib.rs  model.rs  publish.rs  query.rs  refs.rs
crates/logseq-core/tests/: graph.rs  roundtrip.rs
crates/lsdoc-wasm/: Cargo.toml
crates/lsdoc-wasm/src/: lib.rs
crates/tine-core/: Cargo.toml
crates/tine-core/assets/: README.md
crates/tine-core/examples/: build-demo-site.rs  date_golden.rs  oplog_sharding_bench.rs  parse-corpus.rs  publish_security_fixture.rs  roundtrip_dir.rs  roundtrip_org_dir.rs  sheets_phase0_bench.rs
crates/tine-core/src/: config.rs  date.rs  doc.rs  edn.rs  html_sanitize.rs  lib.rs  logbook.rs  model.rs  onboarding.rs  org.rs  pdf.rs  publish.rs  query.rs  query_plan.rs  reference_evidence.rs  refs.rs  render.rs  search_query.rs  sync_diff.rs
crates/tine-core/src/crdt/: graph.rs  mod.rs  snapshot.rs  store.rs
crates/tine-core/src/oplog/: authenticated_patricia.rs  batch.rs  causal_index.rs  dependency_queue.rs  document_state.rs  evidence_index.rs  external_import.rs  hot_engine.rs  identity.rs  import.rs  loro_store.rs  mod.rs  object_store.rs  page_name_index.rs  portable_path_index.rs  projection.rs  projection_crash_corpus_tests.rs  projection_manifest.rs  projection_store.rs  projection_work_index.rs  receipt.rs  scratch_store.rs  semantic.rs  simulator.rs  sqlite.rs  sqlite_materialization.rs  uuid_claim_index.rs
crates/tine-core/src/templates/: config.edn  formulas.md  guide.md  pdf.md  plugins.md  quick-capture.md  roadmap.md  sheets.md  showcase.md  tips.md  welcome.md
crates/tine-core/tests/: crdt_convergence.rs  crdt_store.rs  crdt_structure.rs  derived_cache_fuzz.rs  gh221_malformed_html.rs  graph.rs  issue137_investigation.rs  logseq_pdf_edn.rs  managed_sync.rs  oplog_hot_engine.rs  oplog_import.rs  oplog_primitives.rs  oplog_projection.rs  oplog_simulator.rs  oplog_store.rs  pdf_area_lifecycle.rs  roundtrip.rs  search_edit.rs
crates/tine-core/tests/fixtures/oplog-projection-crash-corpus/: v2.json
crates/tine-core/tests/fixtures/oplog-simulator/: duplicate-reordered-dependent-tail-restart.scenario.json  filesystem-provider-transport.scenario.json  independent-genesis-lineage-refusal.scenario.json  local-author-whole-batch-to-two-replicas.scenario.json  manifest-before-objects-and-missing.scenario.json  moved-away-move-delete.scenario.json  object-before-manifest.scenario.json  truncated-and-tampered-object-and-manifest.scenario.json
docs/: ANDROID-RELEASE.md  BACKLOG.md  BENCH.md  CI.md  FEATURES.md  ISSUE-WORKFLOW.md  RELEASE-CHECKLIST.md  SCREENSHOTS.md  SETTINGS-INVENTORY.md  UI-REGRESSION-TESTING.md  breadth-grid-spec.md  excalidraw-assets-spec.md  og-feature-map.md  og-pdf-and-shortcuts.md  split-view-spec.md  tine-scope.md  ui-regression-testing.md  wasm-parse-plan.md
evidence/: 2026-07-16-issue-137-reference-matching.md  2026-07-16-issue-161-android-back.md  2026-07-16-issue-161-browser-drawer-proof.md  2026-07-16-issue-161-left-navigation.md  2026-07-16-issue-161-native-drawer-proof.md  2026-07-16-issue-161-p1d1-c-lifecycle-implementation.md  2026-07-16-issue-161-p1d1-d-render-realm-implementation.md  2026-07-16-issue-161-p1d2-fallbacks-implementation.md  2026-07-16-issue-161-responsive-shell.md  2026-07-16-issue-161-right-close-safety.md  2026-07-16-issue-161-transient-completion.md  2026-07-16-v0510-reference-authoring-native-matrix.md
fixtures/: html-sanitize-cases.json
flatpak/: README.md  cargo-sources.json  node-sources.json  page.tine.Tine.desktop  page.tine.Tine.metainfo.xml  page.tine.Tine.yml  page.tine.app.desktop  page.tine.app.metainfo.xml  page.tine.app.yml
packaging/: install-icon.sh
plugin-sdk/rust/: Cargo.toml
plugin-sdk/rust/src/: lib.rs
scripts/: assemble-release-candidate.mjs  bench-ab.mjs  bench-policy.json  bench-startup.mjs  bench.mjs  build-community-plugins.sh  build-e2e-inputs.mjs  build-e2e-receipt.mjs  build-guide-demo.mjs  build-plugin-graph-ownership-fixture.mjs  build-plugin-revocation-fixture.mjs  build-wasm.mjs  check-bench-ab.mjs  check-bench-policy.mjs  check-capture-dispatch.mjs  check-ci-evidence.mjs  check-devtools-detach.mjs  check-flatpak-cargo-sources.mjs  check-flatpak-node-sources.mjs  check-linux-window-identity.mjs  check-lsdoc-oracle-behavior.mjs  check-lsdoc-oracle-sync.mjs  check-mobile-drawers.mjs  check-mobile-layout.mjs  check-plugin-revocation-fixtures.mjs  check-publish-outline-geometry.mjs  check-reddit-blog.mjs  check-regression-catalog.mjs  check-release-assets.mjs  check-release-preflight.mjs  check-release-readiness.mjs  check-selection-toolbar.mjs  check-tao-native-titlebar.mjs  check-ui-regression-catalog.mjs  check-wasm-pin.mjs  ci-evidence-lib.mjs  deploy.sh  docs-preview-paths.mjs  e2e-alias.mjs  e2e-block-embed.mjs  (+119 more)
src/: App.test.tsx  App.topbar.test.tsx  App.tsx  androidBack.test.ts  androidBack.ts  assetCache.test.ts  assetCache.ts  assetRefresh.ts  assetSettings.ts  backend.clipboard.test.tsx  backend.ts  blockColors.ts  blockDrag.ts  blockId.test.ts  blockIdentity.test.ts  blockIdentity.ts  blockRefCounts.test.tsx  blockRefCounts.ts  capture.tsx  (+133 more)
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: capture.json  default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_folder_picker.rs  android_media.rs  android_system_bars.rs  backup.rs  commands.rs  debug.rs  graph.rs  lib.rs  linux_window_identity.rs  main.rs  media_protocol.rs  migrate_identifier.rs  native_mouse_history.rs  platform.rs  plugins.rs  settings.rs  spellcheck.rs  state.rs  watcher.rs
(+523 files in other folders)
