[workspace]
members = ["crates/tine-core", "src-tauri"]
# lsdoc-wasm is built ONLY by `npm run build:wasm` (wasm-pack, wasm32 target) to
# regenerate the vendored frontend parser. Excluded so normal `cargo build`/`cargo
# test --workspace` (host target) never touch it. See docs/wasm-parse-plan.md.
exclude = ["crates/lsdoc-wasm"]
resolver = "2"

[workspace.package]
version = "0.4.4"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Martin Koutecký"]

# Reproducible builds (F-Droid #reproducible): strip machine-specific absolute
# paths (cargo home, workspace root, /rustc/<hash>) from the compiled artifacts so
# the APK is byte-identical regardless of WHERE it was built — the developer's CI
# vs F-Droid's builder. Env-independent (unlike RUSTFLAGS=--remap-path-prefix,
# which would need matching prefixes in both environments). Stable since Rust 1.81.
[profile.release]
trim-paths = "all"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
