[workspace]
members = ["crates/tine-core", "src-tauri"]
# lsdoc-wasm is built ONLY by `npm run build:wasm` (wasm-pack, wasm32 target) to
# regenerate the vendored frontend parser. Excluded so normal `cargo build`/`cargo
# test --workspace` (host target) never touch it. See docs/wasm-parse-plan.md.
exclude = ["crates/lsdoc-wasm"]
resolver = "2"

[workspace.package]
version = "0.5.8"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Martin Koutecký"]

# Reproducible builds (F-Droid #reproducible): the default release profile uses 16
# parallel codegen units, whose output order (and cross-unit local-symbol renaming)
# is nondeterministic — two builds of the same source produce differently-ordered
# .so files. A single codegen unit makes the native lib byte-deterministic (at some
# build-time/-speed cost). codegen-units is a stable profile key.
[profile.release]
codegen-units = 1

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[patch.crates-io]
# tao 0.35.3 stops GTK button events at the application-window handler, which
# also swallows Linux native titlebar controls. This exact upstream merge makes
# GTK propagate those events again. Remove the pin once Tauri adopts tao 0.36+.
# https://github.com/tauri-apps/tao/pull/1218
tao = { git = "https://github.com/tauri-apps/tao", rev = "07f3742b1833b64be27b1ef991e38d557d4276c9" }
