[package]
name = "tine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# `custom-protocol` switches the app from dev mode (load the frontend from the
# Vite dev server at devUrl) to prod mode (serve the embedded `dist/` over the
# tauri:// protocol). The Tauri CLI enables this on `tauri build`; a bare
# `cargo build --release` does NOT — so release binaries MUST be built with
# `--features custom-protocol`, else they show "Could not connect to localhost".
[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# `image-png` lets `tauri::image::Image::from_bytes` decode the PNG the lightbox
# sends, so `copy_image_to_clipboard` can write it to the OS clipboard.
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
notify = "6"
# Asset write commands receive bytes as base64 (a single compact string) instead
# of a JSON number[] (~4-5x payload + a giant per-element parse on the UI thread).
base64 = "0.22"
tine-core = { path = "../crates/tine-core" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
# In-app self-update (Win/Linux; macOS stays manual — unsigned). The updater
# verifies each artifact against `plugins.updater.pubkey` (minisign); process lets
# the frontend relaunch after `downloadAndInstall()`. See docs/adr + release.yml.
tauri-plugin-updater = "2"

# Linux/WebKitGTK only: enable the webview's native spell checker (enchant +
# hunspell). Pinned to the exact version wry already resolves so the
# `PlatformWebview::inner()` WebView type unifies. Other platforms' webviews
# spellcheck via the textarea attribute alone, so no equivalent dep is needed.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
