[package]
name = "tine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# `custom-protocol` switches the app from dev mode (load the frontend from the
# Vite dev server at devUrl) to prod mode (serve the embedded `dist/` over the
# tauri:// protocol). The Tauri CLI enables this on `tauri build`; a bare
# `cargo build --release` does NOT — so release binaries MUST be built with
# `--features custom-protocol`, else they show "Could not connect to localhost".
[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# `image-png` lets `tauri::image::Image::from_bytes` decode the PNG the lightbox
# sends, so `copy_image_to_clipboard` can write it to the OS clipboard.
# `devtools` ships the WebKit/WebView inspector in RELEASE builds too (it's on by
# default only in debug), so users can open it for theme/CSS debugging (GH #31).
tauri = { version = "2", features = ["image-png", "devtools"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
notify = "6"
# Asset write commands receive bytes as base64 (a single compact string) instead
# of a JSON number[] (~4-5x payload + a giant per-element parse on the UI thread).
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = "2"
# Resolve the app-data dir before the Tauri app (and its `path()` API) exists, so
# the identifier-rename migration can run BEFORE the webview creates its store.
# `dirs::data_dir()` is the exact base Tauri v2's `app_data_dir()` joins the id onto.
dirs = "6"
tine-core = { path = "../crates/tine-core" }

[dev-dependencies]
tempfile = "3"

# Mobile only: open http/mailto URLs via the OS (an ACTION_VIEW Intent on
# Android). Desktop spawns xdg-open/open/explorer directly (env-scrubbed) in
# platform::open_external, so it doesn't need this. See GH #49.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
# Read OS-native copied-file lists (CF_HDROP / NSPasteboard file URLs /
# text/uri-list). Image support stays with Tauri's existing clipboard plugin.
clipboard-rs = { version = "0.3.5", default-features = false }
# In-app self-update (Win/Linux; macOS stays manual — unsigned). The updater
# verifies each artifact against `plugins.updater.pubkey` (minisign); process lets
# the frontend relaunch after `downloadAndInstall()`. See docs/adr + release.yml.
tauri-plugin-updater = "2"

# Linux/WebKitGTK only: enable the webview's native spell checker (enchant +
# hunspell). Pinned to the exact version wry already resolves so the
# `PlatformWebview::inner()` WebView type unifies. Other platforms' webviews
# spellcheck via the textarea attribute alone, so no equivalent dep is needed.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
# SIGKILL WebKitGTK's helper subprocesses at quit so they don't run their GL/EGL
# driver atexit teardown (which double-frees → SIGABRT coredump on many Mesa/driver
# combos). See platform::kill_webkit_children and GH #28.
libc = "0.2"
