[package]
name = "logseq-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
slotmap = { version = "1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
