[package]
name = "tine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
slotmap = { version = "1", features = ["serde"] }
ammonia = "4"
lsdoc = { git = "https://github.com/martinkoutecky/lsdoc", tag = "v0.5.2" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
pretty_assertions = "1"
