[package]
name = "tine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8.12"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
postcard = { version = "1.1.3", features = ["alloc"] }
smallvec = { version = "1.15.2", features = ["serde"] }
slotmap = { version = "1", features = ["serde"] }
ammonia = "4"
lsdoc = { git = "https://github.com/martinkoutecky/lsdoc", tag = "v0.5.4" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
regex = "1"
loro = { path = "../../vendor/loro-1.13.6", version = "=1.13.6" }
libc = "0.2"
cap-std = "4.0.2"
same-file = "1.0.6"
fs2 = "0.4.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
unicode-normalization = "0.1"
unicode-segmentation = "1"

[target.'cfg(windows)'.dependencies]
cap-fs-ext = "=4.0.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
pretty_assertions = "1"
