[package]
name = "tine-plugin-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Guest SDK for capability-limited Tine WebAssembly plugins"
repository = "https://github.com/martinkoutecky/tine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
